# overlay-reader

./: CMakeLists.txt  Makefile  ResourcesParser.cpp  ResourcesParser.h  ResourcesParserInterpreter.cpp  ResourcesParserInterpreter.h  main.cpp
data/: CMakeLists.txt  liboverlay-reader.pc.in
debian/: changelog  control  getoverlay.install  liboverlay-reader-dev.install  liboverlay-reader.install  liboverlay-reader0.install
src/: CMakeLists.txt  main.cpp  overlay-reader.cpp  overlay-reader.h
src/arcsParser/: CMakeLists.txt  ResourcesParser.cpp  ResourcesParser.h  ResourcesParserInterpreter.h
src/axmlParser/: AxmlParser.c  CMakeLists.txt
